[package]
name = "rand-array-iid"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@gmail.com>"]
edition = "2018"
description = "Create arrays whose elements are independently identically distributed."
readme = "Readme.md"
repository = "https://github.com/krtab/rand-array-iid"
license = "MIT"
keywords = ["rand","random","array","arr"]
categories = ["algorithms","no-std"]

[badges]
travis-ci = { repository = "krtab/rand-array-iid", branch = "main" }
maintenance = { status = "passively-maintained" }

[dependencies]
rand = {version = "0.7.3"}
rand_distr =  {version = "0.3.0"}
array-init = "0.1.1"

[features]
more_array_sizes = []