[package]
name = "panic_sampling"
version = "0.1.0"
authors = ["Arthur Carcano <53921575+krtab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand-array-iid = {path="../rand-array-iid"}
rand = "*"
rand_distr = "*"